// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingScreen snapshots > matches snapshot in error state 1`] = `
<div>
  <div
    style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #0a0a0f; font-family: Montserrat, sans-serif; gap: 20px;"
  >
    <div
      style="width: 64px; height: 64px; border-radius: 18px; background: radial-gradient(circle at 30% 30%, #f5c518, #c9516a); display: flex; align-items: center; justify-content: center; box-shadow: 0 8px 32px rgba(245,197,24,0.3); animation: none;"
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      >
        <path
          d="M12 2C8.686 2 6 4.686 6 8c0 4.418 2.25 8.418 4.5 11.5C12.75 22.5 13.5 22 13.5 22S18 14.5 18 8c0-3.314-2.686-6-6-6z"
          fill="#22c55e"
        />
        <circle
          cx="12"
          cy="8.5"
          fill="#0f0f18"
          r="2.2"
        />
      </svg>
    </div>
    <p
      style="font-size: 15px; font-weight: 700; color: #e74c3c;"
    >
      Failed to load data
    </p>
    <p
      style="font-size: 12px; color: #9898b3; max-width: 320px; text-align: center; line-height: 1.6;"
    >
      Network failure
    </p>
  </div>
</div>
`;

exports[`LoadingScreen snapshots > matches snapshot in loading state 1`] = `
<div>
  <div
    style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; background: #0a0a0f; font-family: Montserrat, sans-serif; gap: 20px;"
  >
    <div
      style="width: 64px; height: 64px; border-radius: 18px; background: radial-gradient(circle at 30% 30%, #f5c518, #c9516a); display: flex; align-items: center; justify-content: center; box-shadow: 0 8px 32px rgba(245,197,24,0.3); animation: pulse 1.6s ease-in-out infinite;"
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      >
        <path
          d="M12 2C8.686 2 6 4.686 6 8c0 4.418 2.25 8.418 4.5 11.5C12.75 22.5 13.5 22 13.5 22S18 14.5 18 8c0-3.314-2.686-6-6-6z"
          fill="#22c55e"
        />
        <circle
          cx="12"
          cy="8.5"
          fill="#0f0f18"
          r="2.2"
        />
      </svg>
    </div>
    <p
      style="font-family: Montserrat, sans-serif; font-size: 22px; font-weight: 400; color: #ffffff; text-shadow: 0 1px 3px rgba(0,0,0,0.9); letter-spacing: 0.01em; line-height: 1.1;"
    >
      ReelSpot SF
    </p>
    <p
      style="font-size: 13px; color: #9898b3; font-family: Montserrat, sans-serif;"
    >
      Loading filming locations…
    </p>
  </div>
</div>
`;
